Update README 1.0