@@ -1,1 +1,61 @@
+
 # TNTVillage-Dump
+
+## 2019 annuncio | [Fonte](https://archiveteam.org/index.php?title=TNTvillage#2019_announcement)
+
+> In April 2019, an interview to Luigi Di Liberto spread the news about
+> legal issues faced by the founder of TNTvillage. Later he announced
+> the official disbanding of the association and impending shutdown of
+> the website. On 2019-09-01 the following announcement replaced all
+> pages:
+> 
+> TNT is closed
+> 
+> EN: Unfortunately due to Di Liberto's decision, not attributable to
+> our will and with extreme regret, we inform you that the site and the
+> forum are closed.
+> 
+> If you are a geek, you may be interested in downloading
+> [THIS](https://archive.org/details/dump_release_tntvillage_2019-08-30).
+> 
+> IT: Purtroppo su decisione di Di Liberto, non imputabile alla nostra
+> volontà e con estremo rammarico, vi informiamo che il sito e il forum
+> sono chiusi.
+> 
+> Se sei uno smanettone, potresti essere interessato a scaricare
+> [QUESTO](https://archive.org/details/dump_release_tntvillage_2019-08-30).
+> 
+> — TNT Team
+#
+## Requisiti
+
+ - Un software per scaricare link 'Magnet' come ad esempio uTorrent.
+ - Inserire questa rine negli argomenti per la compilazione/esecuzione, se non avete mai usato JavaFX cercate online. `--module-path "C:\Your\Path\javafx\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml`
+ - File *.csv è recuperabile tramite [wikipedia](https://archiveteam.org/index.php?title=TNTvillage#2019_announcement).
+
+#
+## Utilizzo
+### Avvia 'App.java'
+![1](https://github.com/NoNameoN-A/TNTVillage-Dump/blob/main/README%20Image/1.PNG)
+#
+### Carica il file *.csv
+![2](https://github.com/NoNameoN-A/TNTVillage-Dump/blob/main/README%20Image/2.PNG)
+#
+### Dovrai visualizzare questa interfaccia
+![3](https://github.com/NoNameoN-A/TNTVillage-Dump/blob/main/README%20Image/3.PNG)
+#
+### Utilizza la barra di ricerca
+*N.B. La barra di ricerca effettua una ricerca solo nel Titolo quindi non cercare per altri parametri*
+![4](https://github.com/NoNameoN-A/TNTVillage-Dump/blob/main/README%20Image/4.PNG)
+#
+### Scarica cliccando sul pulsante indicato
+![5](https://github.com/NoNameoN-A/TNTVillage-Dump/blob/main/README%20Image/5.PNG)
+#
+### Buon download (:
+![6](https://github.com/NoNameoN-A/TNTVillage-Dump/blob/main/README%20Image/6.PNG)
+#
+# Crediti
+
+ - Repo: https://github.com/NoNameoN-A/TNTVillage-Dump
+ - WebSite: https://nonameon.altervista.org/
+ - Email: nonameon@protonmail.ch
